--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -134,7 +134,7 @@
             var loading = $(this).find('.layui-icon'); //提交按钮下的等待圈
             if (loading.is(":visible")) return;
             loading.show();
-            $.post(ctx + 'login', data.field, function (r) {
+            $.post(ctx + 'login', data.field, function (r) {  //data.field当前容器的全部表单字段，名值对形式：{name: value}
                 if (r.code === 200) {
                     location.href = ctx + 'index';
                 } else {
@@ -143,7 +143,7 @@
                     initCaptchaCode();
                 }
             });
-            return false;
+            return false; //阻止表单跳转。如果需要表单跳转，去掉这段即可。
         });
 
         //提交注册表单
