--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -140,7 +140,7 @@
                 } else {
                     layer.msg(r.message);
                     loading.hide();
-                    initCaptchaCode();
+                    /*initCaptchaCode();*/
                 }
             });
             return false; //阻止表单跳转。如果需要表单跳转，去掉这段即可。
