--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,6 +35,7 @@
         apexcharts: 'lay/extends/apexcharts.min',
         eleTree: 'lay/extends/eleTree'
     }).use(['index'])
+    console.log(layui.cache);
 </script>
 </body>
 </html>
