--- a/src/main/resources/templates/views/index.html
+++ b/src/main/resources/templates/views/index.html
@@ -78,7 +78,7 @@
                         <div class="layui-col-md6 layui-col-sm12 layui-col-xs12">
                             <div class="layui-row welcome-info-wrapper">
                                 <div class="user-header">
-                                    <img alt="头像" id="user-avatar" data-th-src="@{febs/images/avatar/default.jpg}">
+                                    <img alt="头像" id="user-avatar" data-th-src="@{febs/images/avatar/empty.jpg}">
                                 </div>
                                 <div class="user-info">
                                     <div class="layui-row">
@@ -121,151 +121,10 @@
                 </div>
             </div>
         </div>
-        <div class="layui-col-md6 layui-col-sm6 layui-col-xs12">
+        <div class="layui-col-md12 layui-col-sm12 layui-col-xs12">
             <div class="layui-card">
                 <div class="layui-card-body">
                     <div id="chart" style="height: 350px"></div>
-                </div>
-            </div>
-        </div>
-        <div class="layui-col-md6 layui-col-sm6 layui-col-xs12">
-            <div class="layui-card">
-                <div class="layui-card-body">
-                    <table class="project-table">
-                        <tr>
-                            <td style="padding: .8rem;">进行中的项目</td>
-                            <td style="padding: .8rem;text-align: right">
-                                <a target="_blank" href="https://github.com/wuyouzhuguli?tab=repositories">所有项目</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="project-table-td">
-                                <div class="layui-row">
-                                    <div class="layui-col-md12 layui-col-xs12">
-                                        <div class="layui-row">
-                                            <div class="layui-col-md12">
-                                                <a target="_blank" href="https://github.com/wuyouzhuguli/FEBS-Shiro">FEBS
-                                                    Shiro</a>
-                                            </div>
-                                            <div class="project-desc">
-                                                Spring Boot 2.0.4 & Shiro1.4.0 权限管理系统。
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </td>
-                            <td class="project-table-td">
-                                <div class="layui-row">
-                                    <div class="layui-col-md12 layui-col-xs12">
-                                        <div class="layui-row">
-                                            <div class="layui-col-md12">
-                                                <a target="_blank" href="https://github.com/wuyouzhuguli/FEBS-Security">FEBS
-                                                    Security</a>
-                                            </div>
-                                            <div class="project-desc">
-                                                Spring Boot 2.0.4 & Spring Security 5.0.7 权限管理系统。
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="project-table-td">
-                                <div class="layui-row">
-                                    <div class="layui-col-md12 layui-col-xs12">
-                                        <div class="layui-row">
-                                            <div class="layui-col-md12">
-                                                <a target="_blank" href="https://github.com/wuyouzhuguli/FEBS-Vue">FEBS
-                                                    Vue</a>
-                                            </div>
-                                            <div class="project-desc">
-                                                FEBS-Shiro前后端分离版本，前端架构采用Vue全家桶。
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </td>
-                            <td class="project-table-td">
-                                <div class="layui-row">
-                                    <div class="layui-col-md12 layui-col-xs12">
-                                        <div class="layui-row">
-                                            <div class="layui-col-md12">
-                                                <a target="_blank" href="https://github.com/wuyouzhuguli/FEBS-Actuator">FEBS
-                                                    Actuator</a>
-                                            </div>
-                                            <div class="project-desc">
-                                                使用Spring Boot Admin 2.0.2构建，用于监控FEBS。
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="project-table-td">
-                                <div class="layui-row">
-                                    <div class="layui-col-md12 layui-col-xs12">
-                                        <div class="layui-row">
-                                            <div class="layui-col-md12">
-                                                <a target="_blank" href="https://github.com/wuyouzhuguli/SpringAll">SpringAll</a>
-                                            </div>
-                                            <div class="project-desc">
-                                                循序渐进学习Spring Boot、Spring Cloud与Spring Security。
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </td>
-                            <td class="project-table-td">
-                                <div class="layui-row">
-                                    <div class="layui-col-md12 layui-col-xs12">
-                                        <div class="layui-row">
-                                            <div class="layui-col-md12">
-                                                <a target="_blank" href="https://github.com/wuyouzhuguli/Conciseness">Conciseness</a>
-                                            </div>
-                                            <div class="project-desc">
-                                                Leanote博客主题Conciseness。
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="project-table-td">
-                                <div class="layui-row">
-                                    <div class="layui-col-md12 layui-col-xs12">
-                                        <div class="layui-row">
-                                            <div class="layui-col-md12">
-                                                <a target="_blank"
-                                                   href="https://github.com/wuyouzhuguli/Material-Design">Material
-                                                    Design</a>
-                                            </div>
-                                            <div class="project-desc">
-                                                Leanote博客主题Material Design。
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </td>
-                            <td class="project-table-td">
-                                <div class="layui-row">
-                                    <div class="layui-col-md12 layui-col-xs12">
-                                        <div class="layui-row">
-                                            <div class="layui-col-md12">
-                                                <a target="_blank"
-                                                   href="https://github.com/wuyouzhuguli/Summer">Summer</a>
-                                            </div>
-                                            <div class="project-desc">
-                                                Leanote博客主题🌴Summer。
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
-                    </table>
                 </div>
             </div>
         </div>
@@ -287,9 +146,9 @@
             var time = hour < 6 ? '早上好' : (hour <= 11 ? '上午好' : (hour <= 13 ? '中午好' : (hour <= 18 ? '下午好' : '晚上好')));
             var welcomeArr = [
                 '喝杯咖啡休息下吧☕',
-                '要不要和朋友打局LOL',
+                '今天工作顺心吗？',
                 '今天又写了几个Bug呢',
-                '今天在群里吹水了吗',
+                '今天在群里划水了吗',
                 '今天吃了什么好吃的呢',
                 '今天您微笑了吗😊',
                 '今天帮助别人了吗',
