--- a/src/main/resources/templates/views/layout.html
+++ b/src/main/resources/templates/views/layout.html
@@ -17,7 +17,7 @@
                     <a>
                         <img style="width: 1.9rem;margin-right:.5rem;border-radius: 50%"
                              src="{{= ctx + 'febs/images/avatar/' + currentUser.avatar }}" title="头像">
-                        {{ currentUser.username }}
+                        {{ currentUser.nickname }}
                     </a>
                     <dl class="layui-nav-child">
                         <dd><a class="layui-nav-child-href" id="user-profile">个人中心</a></dd>
