--- a/src/main/resources/templates/views/index.html
+++ b/src/main/resources/templates/views/index.html
@@ -157,7 +157,7 @@
             ];
             var index = Math.floor((Math.random() * welcomeArr.length));
             var welcomeMessage = time + '，<a id="febs-index-user">' + currentUser.nickname + '</a>，' + welcomeArr[index];
-            $view.find('#today-ip').text(data.todayIp).end() //今日IP数
+            $view.find('#today-ip').text(data.todayIpCount).end() //今日IP数
                 .find('#today-visit-count').text(data.todayVisitCount).end() //今日总访问数
                 .find('#total-visit-count').text(data.totalVisitCount).end()  //系统总访问数
                 .find('#user-dept').text(currentUser.deptName ? currentUser.deptName : '暂无所属部门').end()
@@ -167,8 +167,8 @@
                 .find('#user-avatar').attr('src', ctx + "febs/images/avatar/" + currentUser.avatar);
 
             var currentTime = new Date().getTime();
-            var yourVisitCount = [];
-            var totalVisitCount = [];
+            var yourVisitCount = []; //自己的访问量
+            var totalVisitCount = []; //系统总访问量
             var lastTenDays = [ //最近10天
                 util.toDateString(new Date(currentTime - 1000 * 9 * 86400), 'MM-dd'),
                 util.toDateString(new Date(currentTime - 1000 * 8 * 86400), 'MM-dd'),
