用户信息编辑

--- a/src/main/resources/templates/views/system/user/userUpdate.html
+++ b/src/main/resources/templates/views/system/user/userUpdate.html
@@ -25,7 +25,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">昵称：</label>
             <div class="layui-input-block">
-                <input type="text" name="nickname" minlength="4" maxlength="20" lay-verrify="range" autocomplete="off" class="layui-input">
+                <input type="text" name="nickname" minlength="4" maxlength="20" lay-verify="range" autocomplete="off" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
