--- a/src/main/resources/templates/views/system/role/role.html
+++ b/src/main/resources/templates/views/system/role/role.html
@@ -251,7 +251,7 @@
 
         function getQueryParams() {
             return {
-                roleName: $searchForm.find('input[name="roleName"]').val().trim(),
+                name: $searchForm.find('input[name="roleName"]').val().trim(),
                 invalidate_ie_cache: new Date()
             };
         }
