--- a/src/main/resources/templates/views/layout.html
+++ b/src/main/resources/templates/views/layout.html
@@ -22,7 +22,7 @@
                     <dl class="layui-nav-child">
                         <dd><a class="layui-nav-child-href" id="user-profile">个人中心</a></dd>
                         <dd><a class="layui-nav-child-href" id="password-update">密码修改</a></dd>
-                        <dd><a class="layui-nav-child-href" target="_blank" href="https://github.com/AnthonyZero/boot-admin-scaffold">项目地址</a></dd>
+                        <!--<dd><a class="layui-nav-child-href" target="_blank" href="https://github.com/AnthonyZero/boot-admin-scaffold">项目地址</a></dd>-->
                         <hr/>
                         <dd><a class="layui-nav-child-href" data-th-href="@{logout}">退出登录</a></dd>
                     </dl>
